# p2p

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  UPGRADE_SUMMARY.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  main.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  release.yml
01_Documentation/: BUSINESS_EXPANSION_STRATEGY.md  CLIMATE_SOLUTIONS.md  DEVELOPMENT_ROADMAP_3YEARS.md  FLOWCHART.md  GIT_LFS_GUIDE.md  HUMAN_RESOURCES_DEVELOPMENT.md  LEGAL_COMPLIANCE.md  NETLIFY_FIREBASE_SETUP.md  README.md  README_YOLOv11.md  README_YOLOv11_Servo.md  TECHNOLOGY_INNOVATION_PLAN.md  TROUBLESHOOTING_FIREBASE.md
02_AI_Detection/: README.md  yolo_arduino_firebase_bridge.py  yolo_bottle_detection.py  yolo_v11_arduino_firebase.py  yolo_v11_servo_system.py
03_Hardware/: README.md  arduino_yolo_firebase.ino  arduino_yolo_v11_firebase.ino  arduino_yolo_v11_servo.ino
04_Web_Dashboard/: OPTIMIZATION_GUIDE.md  README.md  dashboard.html  index.html  login.html  register.html
05_Firebase_Config/: README.md  firebase-config.js  firebase.json  firestore.rules
06_Assets/: README.md
07_Scripts/: README.md  firebase-to-sheets.js  firebase_debug_test.py  fix_netlify_firebase.bat  google-apps-script.gs  server.js  setup_git_lfs.bat  start_system.bat  start_yolo_v11.bat  start_yolo_v11_servo.bat  test_firebase.bat  test_firebase_connection.py
08_Config/: README.md  config_template.py  config_yolo_v11.py  config_yolo_v11_servo.py  error_handling.py  logging_config.py  main.py  requirements.txt  requirements_yolo_v11.txt  security_config.py  serviceAccountKey.json
09_Testing/: README.md  conftest.py  run_tests.py  test_arduino_communication.py  test_firebase_integration.py  test_utilities.py  test_yolo_detection.py
10_Monitoring/: performance_optimizer.py  system_monitor.py
11_Backup/: backup_manager.py
13_Mobile/: mobile_app.py
14_Security/: security_manager.py
15_Performance/: performance_optimizer.py
16_Monitoring/: monitoring_system.py
17_Advanced_AI/: advanced_ai_system.py
18_Cloud_Services/: README.md  cloud_config.py  cloud_integration.py  requirements.txt
19_Mobile_Experience/: README.md  mobile_ai_system.py  mobile_config.py  requirements.txt
20_Testing_Framework/: README.md  requirements.txt  test_config.py  test_framework.py
21_Analytics_Dashboard/: README.md  analytics_dashboard.py  dashboard_config.py  real_time_analytics.py  requirements.txt
22_API_Documentation/: api_documentation.py  requirements.txt
22_API_Documentation/interactive_examples/: api_explorer.html  detection_playground.html
22_API_Documentation/templates/sdk/javascript/: client.js.j2
22_API_Documentation/templates/sdk/python/: client.py.j2
functions/: GOOGLE_SHEETS_SETUP.md  README.md  deploy.ps1  deploy.sh
functions/src/: index.ts  sheets-helper.ts
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  nginx-deployment.yaml  persistent-volume.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml
tests/: __init__.py  test_main.py
